name:                2pc
version:             0.0.2
synopsis:            protocol agnostic two phase commit implementation
description:         Two phase protocol is a protocol to perform synchonized
                     actions in distributed systems. This implementation is
                     network agnostic.
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Network.TwoPhase, Network.TwoPhase.STM,
                       Control.Concurrent.STM.Split.Class,
                       Control.Concurrent.STM.Split.TVar
  -- other-modules:       
  build-depends:       base ==4.6.*, stm ==2.4.*, binary ==0.6.*, bytestring ==0.10.*, containers ==0.5.*,mtl,
                       vector, mwc-random, either
  ghc-options:         -Wall

test-suite  2pc-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          TestSuite2.hs
  ghc-options:      -threaded
  build-depends:    
    base == 4.6.*,
    2pc,
    containers,
    stm,
    bytestring,
    binary,
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.4 && < 2.6,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.2 && < 0.4,
    test-framework-quickcheck2 >= 0.2 && < 0.4
